include/codata_constants_2022.h

ADD_IMPORT extern const struct codata_constant_type DEUTERON_MOLAR_MASS;
ADD_IMPORT extern const struct codata_constant_type DEUTERON_NEUTRON_MAG_MOM_RATIO;
ADD_IMPORT extern const struct codata_constant_type DEUTERON_PROTON_MAG_MOM_RATIO;
ADD_IMPORT extern const struct codata_constant_type DEUTERON_PROTON_MASS_RATIO;
ADD_IMPORT extern const struct codata_constant_type DEUTERON_RELATIVE_ATOMIC_MASS;
ADD_IMPORT extern const struct codata_constant_type DEUTERON_RMS_CHARGE_RADIUS;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_CHARGE_TO_MASS_QUOTIENT;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_DEUTERON_MAG_MOM_RATIO;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_DEUTERON_MASS_RATIO;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_G_FACTOR;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_GYROMAG_RATIO;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_GYROMAG_RATIO_IN_MHZ_T;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_HELION_MASS_RATIO;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_MAG_MOM;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_MAG_MOM_ANOMALY;
ADD_IMPORT extern const struct codata_constant_type ELECTRON_MAG_MOM_TO_BOHR_MAGNETON_RATIO;