src/codata_constants_2022_capi.f90


type(capi_constant_type), protected, public, bind(C, name="DEUTERON_MOLAR_MASS") ::&
capi_78 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", " ", "m", &
"o", "l", "a", "r", " ", "m", "a", "s", "s", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_MOLAR_MASS%value, &
DEUTERON_MOLAR_MASS%uncertainty, &
[ &
"k", "g", " ", "m", "o", "l", "^", "-", "1", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_NEUTRON_MAG_MOM_RATIO") ::&
capi_79 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", "-", "n", &
"e", "u", "t", "r", "o", "n", " ", "m", "a", "g", &
".", " ", "m", "o", "m", ".", " ", "r", "a", "t", &
"i", "o", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_NEUTRON_MAG_MOM_RATIO%value, &
DEUTERON_NEUTRON_MAG_MOM_RATIO%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_PROTON_MAG_MOM_RATIO") ::&
capi_80 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", "-", "p", &
"r", "o", "t", "o", "n", " ", "m", "a", "g", ".", &
" ", "m", "o", "m", ".", " ", "r", "a", "t", "i", &
"o", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_PROTON_MAG_MOM_RATIO%value, &
DEUTERON_PROTON_MAG_MOM_RATIO%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_PROTON_MASS_RATIO") ::&
capi_81 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", "-", "p", &
"r", "o", "t", "o", "n", " ", "m", "a", "s", "s", &
" ", "r", "a", "t", "i", "o", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_PROTON_MASS_RATIO%value, &
DEUTERON_PROTON_MASS_RATIO%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_RELATIVE_ATOMIC_MASS") ::&
capi_82 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", " ", "r", &
"e", "l", "a", "t", "i", "v", "e", " ", "a", "t", &
"o", "m", "i", "c", " ", "m", "a", "s", "s", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_RELATIVE_ATOMIC_MASS%value, &
DEUTERON_RELATIVE_ATOMIC_MASS%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_RMS_CHARGE_RADIUS") ::&
capi_83 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", " ", "r", &
"m", "s", " ", "c", "h", "a", "r", "g", "e", " ", &
"r", "a", "d", "i", "u", "s", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_RMS_CHARGE_RADIUS%value, &
DEUTERON_RMS_CHARGE_RADIUS%uncertainty, &
[ &
"m", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_CHARGE_TO_MASS_QUOTIENT") ::&
capi_84 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "c", &
"h", "a", "r", "g", "e", " ", "t", "o", " ", "m", &
"a", "s", "s", " ", "q", "u", "o", "t", "i", "e", &
"n", "t", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_CHARGE_TO_MASS_QUOTIENT%value, &
ELECTRON_CHARGE_TO_MASS_QUOTIENT%uncertainty, &
[ &
"C", " ", "k", "g", "^", "-", "1", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_DEUTERON_MAG_MOM_RATIO") ::&
capi_85 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", "-", "d", &
"e", "u", "t", "e", "r", "o", "n", " ", "m", "a", &
"g", ".", " ", "m", "o", "m", ".", " ", "r", "a", &
"t", "i", "o", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_DEUTERON_MAG_MOM_RATIO%value, &
ELECTRON_DEUTERON_MAG_MOM_RATIO%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_DEUTERON_MASS_RATIO") ::&
capi_86 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", "-", "d", &
"e", "u", "t", "e", "r", "o", "n", " ", "m", "a", &
"s", "s", " ", "r", "a", "t", "i", "o", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_DEUTERON_MASS_RATIO%value, &
ELECTRON_DEUTERON_MASS_RATIO%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_G_FACTOR") ::&
capi_87 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "g", &
" ", "f", "a", "c", "t", "o", "r", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_G_FACTOR%value, &
ELECTRON_G_FACTOR%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_GYROMAG_RATIO") ::&
capi_88 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "g", &
"y", "r", "o", "m", "a", "g", ".", " ", "r", "a", &
"t", "i", "o", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_GYROMAG_RATIO%value, &
ELECTRON_GYROMAG_RATIO%uncertainty, &
[ &
"s", "^", "-", "1", " ", "T", "^", "-", "1", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_GYROMAG_RATIO_IN_MHZ_T") ::&
capi_89 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "g", &
"y", "r", "o", "m", "a", "g", ".", " ", "r", "a", &
"t", "i", "o", " ", "i", "n", " ", "M", "H", "z", &
"/", "T", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_GYROMAG_RATIO_IN_MHZ_T%value, &
ELECTRON_GYROMAG_RATIO_IN_MHZ_T%uncertainty, &
[ &
"M", "H", "z", " ", "T", "^", "-", "1", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_HELION_MASS_RATIO") ::&
capi_90 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", "-", "h", &
"e", "l", "i", "o", "n", " ", "m", "a", "s", "s", &
" ", "r", "a", "t", "i", "o", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_HELION_MASS_RATIO%value, &
ELECTRON_HELION_MASS_RATIO%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_MAG_MOM") ::&
capi_91 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "m", &
"a", "g", ".", " ", "m", "o", "m", ".", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_MAG_MOM%value, &
ELECTRON_MAG_MOM%uncertainty, &
[ &
"J", " ", "T", "^", "-", "1", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_MAG_MOM_ANOMALY") ::&
capi_92 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "m", &
"a", "g", ".", " ", "m", "o", "m", ".", " ", "a", &
"n", "o", "m", "a", "l", "y", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_MAG_MOM_ANOMALY%value, &
ELECTRON_MAG_MOM_ANOMALY%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_MAG_MOM_TO_BOHR_MAGNETON_RATIO") ::&
capi_93 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "m", &
"a", "g", ".", " ", "m", "o", "m", ".", " ", "t", &
"o", " ", "B", "o", "h", "r", " ", "m", "a", "g", &
"n", "e", "t", "o", "n", " ", "r", "a", "t", "i", &
"o", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_MAG_MOM_TO_BOHR_MAGNETON_RATIO%value, &
ELECTRON_MAG_MOM_TO_BOHR_MAGNETON_RATIO%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])
